fix(container): allow account sidebar toggle on small screen
ref: MANAGER-9053

--- a/packages/manager/apps/container/src/account-sidebar/index.scss
+++ b/packages/manager/apps/container/src/account-sidebar/index.scss
@@ -21,6 +21,15 @@ $ovh-sidebar-width: 18.75rem;
     button {
       pointer-events: none;
     }
+
+    @media screen and (min-width: ($device-breakpoint-medium  - 1px)) {
+      .force-large-screen-display {
+        width: $ovh-sidebar-width;
+        padding-left: 0;
+        opacity: 1;
+        pointer-events: auto;
+      }
+    }
   }
 
   &.sidebar-expand {
